[tool.poetry]
name = "python-profilers"
version = "0.1.0"
description = "Code to demonstrate profilers and some optimizations"
authors = ["Jonathan Striebel <jonathan.striebel@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
astunparse = "^1.6.3"  # needed for scalene
h5py = "^3.8.0"
matplotlib = "^3.7.1"
memray = "^1.7.0"
py-spy = "^0.3.14"
scalene = "^1.5.21"
snakeviz = "^2.2.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
